menu responsive ok

--- a/Complete Responsive Food  Restaurant/index.html
+++ b/Complete Responsive Food  Restaurant/index.html
@@ -38,12 +38,16 @@
                 </div>
         </header>
 
-
-    <!-- header section ends -->
-
+        <!-- header section ends -->
 
 
+        <!-- sarch form -->
 
+        <form action="" id="search-form">
+            <input type="search" placeholder="search here..." name="" id="search-box">
+            <label for="search-box" class="fas fa-search"></label>
+            <i class="fas fa-times" id="close"></i>
+        </form>
 
 
 
