--- a/Complete Responsive Food  Restaurant/index.html
+++ b/Complete Responsive Food  Restaurant/index.html
@@ -224,7 +224,7 @@
         <!-- about section start -->
 
             <section>
-                
+              <div></div>  
             </section>
 
 
