--- a/Complete Responsive Food  Restaurant/index.html
+++ b/Complete Responsive Food  Restaurant/index.html
@@ -222,17 +222,239 @@
         
         <!-- about section start -->
 
-         
+         <section class="about" id="about">
 
+            <h3 class="sub-heading"> about us </h3>
+            <h1 class="heading"> why choose us? </h1>
 
+            <div class="row">
 
+                <div class="image">
+                    <img src="images/about-img.png" alt="">
+                </div>
 
+                <div class="content">
+                    <h3>best food in the country</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam doloremque, veritatis illum quas reiciendis quasi cumque assumenda ratione quam necessitatibus et corporis.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste nemo nam blanditiis ut laborum magni exercitationem ipsam repellat eveniet molestiae?</p>
+                    <div class="icons-container">
+                        <div class="icons">
+                            <i class="fas fa-shipping-fast"></i>
+                            <span>free delivery</span>
+                        </div>
+                        <div class="icons">
+                            <i class="fas fa-dollar-sign"></i>
+                            <span>easy payments</span>
+                        </div>
+                        <div class="icons">
+                            <i class="fas fa-headset"></i>
+                            <span>24/7 service</span>
+                        </div>
+                    </div>
+                    <a href="#" class="btn">learn more</a>
+                </div>
 
+            </div>
 
-
-
+         </section>
 
         <!-- about section ends -->
+
+
+        <!-- menu section start -->
+
+            <section class="menu" id="menu">
+
+                <h3 class="sub-heading"> our menu </h3>
+                <h1 class="heading"> today's speciality </h1>
+
+                <div class="box-container">
+
+                    <div class="box">
+                        <div class="image">
+                            <img src="images/menu-1.jpg" alt="">
+                            <a href="#" class="fas fa-heart"></a>
+                        </div>
+                        <div class="content">
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <h3>delicious food</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, odit!</p>
+                            <a href="#" class="btn">add to cart</a>
+                            <span class="price">$12.99</span>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="image">
+                            <img src="images/menu-2.jpg" alt="">
+                            <a href="#" class="fas fa-heart"></a>
+                        </div>
+                        <div class="content">
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <h3>delicious food</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, odit!</p>
+                            <a href="#" class="btn">add to cart</a>
+                            <span class="price">$12.99</span>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="image">
+                            <img src="images/menu-3.jpg" alt="">
+                            <a href="#" class="fas fa-heart"></a>
+                        </div>
+                        <div class="content">
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <h3>delicious food</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, odit!</p>
+                            <a href="#" class="btn">add to cart</a>
+                            <span class="price">$12.99</span>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="image">
+                            <img src="images/menu-4.jpg" alt="">
+                            <a href="#" class="fas fa-heart"></a>
+                        </div>
+                        <div class="content">
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <h3>delicious food</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, odit!</p>
+                            <a href="#" class="btn">add to cart</a>
+                            <span class="price">$12.99</span>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="image">
+                            <img src="images/menu-5.jpg" alt="">
+                            <a href="#" class="fas fa-heart"></a>
+                        </div>
+                        <div class="content">
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <h3>delicious food</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, odit!</p>
+                            <a href="#" class="btn">add to cart</a>
+                            <span class="price">$12.99</span>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="image">
+                            <img src="images/menu-6.jpg" alt="">
+                            <a href="#" class="fas fa-heart"></a>
+                        </div>
+                        <div class="content">
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <h3>delicious food</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, odit!</p>
+                            <a href="#" class="btn">add to cart</a>
+                            <span class="price">$12.99</span>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="image">
+                            <img src="images/menu-7.jpg" alt="">
+                            <a href="#" class="fas fa-heart"></a>
+                        </div>
+                        <div class="content">
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <h3>delicious food</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, odit!</p>
+                            <a href="#" class="btn">add to cart</a>
+                            <span class="price">$12.99</span>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="image">
+                            <img src="images/menu-8.jpg" alt="">
+                            <a href="#" class="fas fa-heart"></a>
+                        </div>
+                        <div class="content">
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <h3>delicious food</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, odit!</p>
+                            <a href="#" class="btn">add to cart</a>
+                            <span class="price">$12.99</span>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="image">
+                            <img src="images/menu-9.jpg" alt="">
+                            <a href="#" class="fas fa-heart"></a>
+                        </div>
+                        <div class="content">
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <h3>delicious food</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, odit!</p>
+                            <a href="#" class="btn">add to cart</a>
+                            <span class="price">$12.99</span>
+                        </div>
+                    </div>
+
+                </div>
+
+            </section> 
+
+        <!-- menu section end -->
 
 
 
